# khub-TCM

./: .coverage  .dockerignore  .gitignore  CHANGELOG.md  CODEBUDDY.md  Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  install.sh  pyproject.toml
.github/workflows/: ci.yml
desktop/: main.js  package.json  run.sh
docs/: api.md  architecture.md  config.md  deployment.md  design-a-rag.md  design-c-webui.md  design-d-datasource.md  disaster_recovery.md  operations.md  plan_docker_enhance.md  plan_ebook.md  review_adapters_r1.md  review_adapters_r2.md  review_adapters_r3.md  review_dashboard_r1.md  review_dashboard_r2.md  review_dashboard_r3.md  review_diff_r1.md  review_diff_r2.md  review_docker_final_predeploy.md  review_docker_role_arch_r4.md  review_docker_role_security_r2.md  review_master_r3.md  review_plan_docker_r1.md  review_rag_r1.md  review_round_final.md  review_security_cycle_r3.md  review_security_final.md  review_security_r2.md  review_security_r3.md  review_webui_r1.md  review_webui_r2.md  roadmap-3.0.md  roadmap-4.0.md  roles.md  test_cases.md  test_plan.md  test_report_v0.2.4.md  testing.md
docs/adr/: README.md
docs/archive/: review_consolidated_final.md  review_docker_role_arch.md  review_docker_role_arch_r2.md  review_docker_role_arch_r3.md  review_docker_role_security.md  review_docker_role_security_r3.md  review_docker_role_security_r4.md  review_final_verify.md  review_master_r1.md  review_master_r2.md  review_rag_r2.md  review_security_cycle_r1.md  review_security_cycle_r2.md  review_security_r1.md  review_webui_r3.md
docs/ha_dr/: README.md  failover_runbook.md  review_impl.md  review_round1.md  review_round2.md  review_round3.md
docs/reviews/: architect-review-r2.md  architect-review.md  netsec-review-r2.md  netsec-review.md  ops-review-r2.md  ops-review.md  pm-review-r2.md  pm-review.md  summary.md  sweng-review-r2.md  sweng-review.md
docs/risks/: register.md
flutter/: analysis_options.yaml  pubspec.yaml
flutter/lib/: main.dart
helm/khub/: Chart.yaml  values.yaml
khub/: .bandit  __init__.py  analytics.py  api.py  audit.py  auth.py  cache.py  cli.py  color.py  completion.sh  compliance.py  crypto.py  dashboard.py  db.py  diff.py  events.py  favorites.py  i18n.py  ima.py  ima_notes.py  ima_probe.py  importer.py  ingest.py  log.py  models.py  normalizer.py  notifications.py  obsidian.py  openapi.py  prebuilt.py  quip.py  ratelimit.py  replication.py  reports.py  retention.py  retrieval.py  scheduler.py  search2.py  storage.py  subscriptions.py  (+6 more)
khub.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
khub/adapters/: __init__.py  _feishu_auth.py  base.py  feishu.py
khub/agents/: __init__.py  engine.py  ensemble.py  memory.py  monitor.py  pipeline.py  scheduler.py  store.py  templates.py
khub/api2/: __init__.py  deps.py  legacy.py  server.py
khub/clinic/: __init__.py  billing.py  pharmacy.py
khub/clinical/: __init__.py  analysis.py  cdss.py  consult_chat.py  consultations.py  diagnosis.py  extract.py  followup.py  interview.py  patients.py  records.py  safety.py  tracking.py  twin.py  twin_v2.py  visualize.py
khub/community/: __init__.py  articles.py  comments.py
khub/copilot/: engine.py  intents.py  tools.py
khub/course/: store.py
khub/exam/: __init__.py  generator.py  grader.py  models.py  store.py
khub/extractors/: __init__.py  epub.py  pdf.py
khub/ha/: __init__.py  alerting.py  controller.py  drill.py  reconcile.py  selftest.py  status.py
khub/integrations/: bot.py  status.py
khub/knowledge/: extractor.py  formulas.py  herbs.py  inference.py  schema.py  search.py  seed.py  syndromes.py
khub/llm/: __init__.py  rag.py
khub/ops/: store.py
khub/plugins/: __init__.py  base.py  registry.py
khub/telemedicine/: __init__.py  prescriptions.py  signaling.py
khub/web/: charts.js  index.html  login.html  manifest.json  script.js  (+2 more)
miniapp/: app.js  app.json  app.wxss
nginx/: khub-docker.conf  khub.conf  setup.sh
scripts/: init_data.sh  start_probe.sh
systemd/: khub.service
tests/: conftest.py  test_agents.py  test_agents_v2.py  test_agents_v3.py  test_analytics.py  test_api.py  test_api2.py  test_api2_full.py  test_api_systems.py  test_audit.py  test_auth.py  test_cli.py  test_clinic.py  test_clinical.py  test_clinical_analysis.py  test_clinical_diagnosis.py  test_clinical_tracking.py  test_clinical_twin_llm.py  test_clinical_v3.py  test_community.py  test_compliance.py  test_consult_chat.py  test_copilot.py  test_course.py  test_cover.py  test_dashboard.py  test_db.py  test_desktop.py  test_docker_build.py  test_docker_compose.py  test_exam.py  test_exam_gen_llm.py  test_extract.py  test_extractors.py  test_favorites.py  test_followup.py  test_ha.py  test_ha_drill.py  test_health.py  test_i18n.py  (+52 more)
(+163 files in other folders)
